11.1.2 (21-09-2023)
- Improvement: In exemptions request by file, read the product of treasury event by code, besides reading by description (#UL-FC-4400)
- Improvement: In exemptions request by file, if the debit entry name is not specified, consider only debit entries in treasury event which are not interests (#UL-FC-4400)

11.1.1 (19-09-2023)
- Refactor: Remove relation between TreasuryEvent and TreasuryExemption. the treasuryEvent can be infered in treasuryExemption by accessing the associated debitEntry
- Refactor: Added method to know what is the associated tuition payment plan of calculator, since it might be connected to a aggregator calculator
- Bug Fix: Add missing error label
- Bug Fix: Override LegacyAcademicTreasuryEvent::getDegreeCode and get the associated exemption to discount in tuitions

11.1.0 (14-09-2023)
- Improvement: Remove synchronized keywords to avoid contention. Replace StringBuilder with StringBuffer to avoid synchronized facility
- Improvement: Associate academic debt generation rules by finantial entity

11.0.2 (30-08-2023)
- Bug Fix: Fix bug in standalone and extracurricular tuitions, using the new model of calculators

11.0.1 (28-08-2023)
- Bug Fix: Fixes and improvements in registration tuition service
- Improvement: Remove superfluous check rules in PersonCustomer::switchCustomer

11.0.0 (14-08-2023)
- Improvement: Support in legacy treasury event, the account as tuition and discount tuition amount
- Improvement: Add minimum and maximum amount in tuition calculator aggregator
- Improvement: Support in the legacy treasury event, the exemption type to discount tuition amount
- Improvement: Add in the debt report invoice entries, the invoice entry code in the end
- Improvement: The academic event discount in tuition fee with treasury exemption is true by default
- New feature: Domain model for exemption by statutes
- Improvement: Unit tests for tuition payment plans calculations